# hermit

./: .dir-locals.el  .env  Cargo.toml  Rocket.toml  docker-compose.yml  todo.org  tutorial.org
migrations/2020-02-01-034404_user/: down.sql  up.sql
migrations/2020-02-01-052723_add_posts/: up.sql
migrations/2020-12-29-015427_create_users/: up.sql
migrations/2020-12-29-023318_create_post/: down.sql  up.sql
src/: contexts.rs  forms.rs  main.rs  models.rs  posts.rs  schema.rs  users.rs  util.rs
templates/: base.html.tera  dashboard.html.tera  index.html.tera  index.tera  login.html.tera  logout.html.tera  register.html.tera
