[package]
name = "hermit"
version = "0.1.0"
authors = ["elias <elias.jm.garcia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async"}
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

csrf = "0.3.1"
data-encoding = "2.1.2"

[dependencies.rocket_contrib]
version = "0.4.2"
# rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket/contrib", branch = "async" }
default-features = false
features = ["tera_templates"]